<resources>
    <string name="app_name">CrossfitOnly</string>
    <string name="start">Start</string>
    <string name="crossfit">Crossfit List</string>
    <string name="crossfit_detail">Detailed Excercise</string>
    <string name="workouts">Workouts</string>
    <string name="workouts_detail">Excercises</string>
    <string name="workouts_sets">Sets</string>
    <string name="insert_workout">Add new workout</string>
    <string name="insert_exercise">Add new exercise</string>
    <string name="insert_set">Add new set</string>
    <string name="bmi_calc">BMI calculator</string>
    <string name="plank_timer" translatable="false">Plank timer</string>

    <string name="bmi">BMI</string>
    <string name="crsfit">Crossfit</string>
    <string name="workout">Workout</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">"Are you sure you want to delete this?"</string>


    <string name="enter">Enter Workout</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="btnsave">Add</string>
    <string name="wdh">Enter repetitions</string>
    <string name="sets">Enter numer of sets</string>
    <string name="weight">Enter weight</string>
    <string name="enter_detail">Enter exercise</string>
    <string name="calculateBMI_text_bmi">Calculate</string>
    <string name="height_text_bmi">Height (in cm)</string>
    <string name="weight_text_bmi">Weight (in kg)</string>
    <string name="calculateBMI">Calculate</string>
    <string name="very_severely_underweight">Very severly underweight</string>
    <string name="severely_underweight">Severly underweight</string>
    <string name="underweight">underweight</string>
    <string name="normal">normal</string>
    <string name="overweight">overweight</string>
    <string name="obese_class_i">high overweight</string>
    <string name="obese_class_ii">severly overweight</string>
    <string name="obese_class_iii">very severly overweight</string>
    <string name="minutes">Minutes</string>
    <string name="set_timer">Set</string>
    <string name="start_timer" translatable="false">00:00</string>
    <string name="start_button">start</string>
    <string name="reset_button">reset</string>
    <string name="S" translatable="false">Set</string>
    <string name="W" translatable="false">Wdh</string>
    <string name="We">Weight</string>
    <string name="logout" translatable="false">Logout</string>
</resources>
