<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout1">

        <EditText
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:hint="@string/sets"
            android:textAlignment="center" />

        <EditText
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/set"
            android:hint="@string/wdh"
            android:id="@+id/wdh"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/wdh"
            android:layout_marginTop="10dp"
            android:hint="@string/weight"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:text="@string/btnsave"/>

    </RelativeLayout>

</RelativeLayout>